--- a/app/components/Door/door.less
+++ b/app/components/Door/door.less
@@ -25,24 +25,20 @@ section.index {
         padding: .15rem .35rem;
         border-radius: 3px;
         font-weight: 400;
-     }
-    .tips .content:before{
-        content: '';
-        position: absolute;
-        z-index: 1;
-        top: 50%;
-        left: -12px;
-        width: 0;
-        height: 0;
-        border-width: 3px 9px;
-        border-style: solid;
-        border-color: #a69fa6 #a69fa6 transparent transparent;
-        transform: rotate(-45deg);
-     }
-    .tips .point{
-         width: 5px;
-         height: 5px;
-         background-color: #fff;
+        .content:before{
+            content: '';
+            position: absolute;
+            z-index: 1;
+            top: 50%;
+            left: -6px;
+            width: 0;
+            height: 0;
+            border-width: 3px 6px;
+            border-style: solid;
+            border-color: #a69fa6 #a69fa6 transparent transparent;
+            transform: rotate(-45deg);
+         }
+        
      }
 
     header{
@@ -181,11 +177,11 @@ section.index {
      	vertical-align: top;
      }
      .equipment .tips{
-     	left:~'calc(3.625rem + 12px)';
+     	left:~'calc(3.625rem + 6px)';
      	top: .3rem;
         .point{
-            left: -18%;
-            top:70%;
+            left: -10%;
+            top:60%;
         }
      }
     .model-win{
