--- a/app/components/Room/room.less
+++ b/app/components/Room/room.less
@@ -40,14 +40,14 @@
             content: '';
             position: absolute;
             z-index: 1;
-             top: 25%;
-            left: -12px;
+            top: 25%;
+            left: -8px;
             width: 0;
             height: 0;
-            border-width: 3px 9px;
+            border-width: 3px 6px;
             border-style: solid;
             border-color: #282828 #282828 transparent transparent;
-            transform: rotate(45deg);
+            transform: rotate(25deg);
          }
      }
     
@@ -65,244 +65,321 @@
      	height: 100%;
      	width: 100%;
      	position: relative;
-     }
-     
-     /** 灯**/
-     .page .light{
-     	position: absolute;
-     	top: -.25rem;
-     	left:50%;
-     	transform: translate(-50%);
-     	width: 5rem;
-     	height: 12.3125rem;
-     	background-image: url('images/light.png');
-        background-repeat: no-repeat;
-     	background-size: cover;
-     	z-index: 5;
-        transition: background .5s;
-        &.open{
-            background-image: url('images/light-open.png');
+        /** 灯**/
+        .light{
+         	position: absolute;
+         	top: -.25rem;
+         	left:50%;
+         	transform: translate(-50%);
+         	width: 5rem;
+         	height: 12.3125rem;
+         	background-image: url('images/light.png');
+            background-repeat: no-repeat;
+         	background-size: cover;
+         	z-index: 5;
+            transition: background .5s;
+            &.open{
+                background-image: url('images/light-open.png');
+                background-repeat: no-repeat;
+                background-size: cover;
+                -webkit-transform-style: preserve-3d; 
+                -webkit-backface-visibility: hidden; 
+                -webkit-perspective: 1000; 
+            }
+            .tips{
+             	left:auto;
+             	top:auto;
+             	right: -1.6rem;
+             	bottom: .2rem;
+                .point{
+                    left: -35%;
+                    top:0;
+                }
+             }	
+         }
+
+         /*窗帘杆*/
+        .rod{
+         	position: absolute;
+         	top:6rem;
+         	left:2.96875rem;
+         	right:0.875rem;
+         	height: .625rem;
+         	background: url('images/3.png') no-repeat;
+         	background-size: cover;
+
+         }
+         /*窗户*/
+        .window{
+         	position: absolute;
+         	top:7.34375rem;
+         	left:4.4375rem;
+         	right: 2.375rem;
+         	height: 14.1875rem;
+         	background-image: url('images/scenery.png');
             background-repeat: no-repeat;
             background-size: cover;
-            -webkit-transform-style: preserve-3d; 
-            -webkit-backface-visibility: hidden; 
-            -webkit-perspective: 1000; 
-        }
+         	border-width: 8px 11px;
+            border-style: solid; 
+            border-color: #fff;
+            // perspective:500;
+            // perspective-origin:left top;
+            overflow: hidden;
+            .tips{
+             	left:40%;
+             	top:50%;
+                .point{
+                    left: -8/16rem;
+                    top:0px;
+                }
+             }
+            .left-win,
+            .right-win{
+             	width: ~'calc(50% - 4px)';
+             	height: 100%;
+             	background-color: rgba(187, 246, 250, 0.7);
+                // opacity: .9;
+               
+             }
+            .frame-win{
+                background-color: #fff;
+                position: absolute;
+                top: 0;
+                left: 50%;
+                width: .5rem;
+                transform: translate(-0.25rem);
+                height: 100%;
+             }
+             .left-win{
+             	float: left;
+             	padding-right: 7px;
+                &.open{
+                    transition:transform 2s,transform-origin .5s;
+                    // transform-origin:left top;
+                    transform:translate(-80%,0);
+                }
+                &.close{
+                    transition:transform 2s,transform-origin 8s;
+                }
+             }
+             .right-win{
+             	padding-left: 7px;
+             	float: right;
+                &.open{
+                    transition:transform 2s,transform-origin .5s;
+                    // transform-origin:right top;
+                    transform:translate(80%,0);
+                    //scale(.95,.95) rotateY(-100deg)
+                }
+                 &.close{
+                    transition:transform 2s,transform-origin 8s;
+                }
+             }
+         }
+         /*窗帘*/
+        .curtains{
+         	position: absolute;
+         	top:6.6rem;
+         	height:20.15rem;
+         	background: rgba(187, 246, 250, 0.9) url('images/1.png') 0 0 no-repeat;
+         	background-size: cover;
+            transition: width 3s;
+             &.left{
+             	left:3.75rem;
+             	width:2.5625rem;
+                &.close{
+                    width:~'calc((100% - (3.75rem + 1rem)) / 2)';
+                }
+             }
+             &.right{
+             	right:1.78125rem;
+             	width:2.5625rem;
+                &.close{
+                    width:~'calc((100% - (3.75rem + 1rem)) / 2)';
+                }
+             }
+             &.left .tips{
+             	left:4rem;
+             	top:auto;
+             	bottom: 40%;
+                width: ~'calc(.9rem*2 + .7rem)';
+                .point{
+                    left: -8/16rem;
+                    top:0px;
+                }
+             }
+         }
+         /*音响*/
+        .sound{
+         	position: absolute;
+         	top:8.1875rem;
+         	left:1.75rem;
+         	width: 1.5625rem;
+         	height: 5rem;
+         	background: url('images/10.png') no-repeat;
+         	background-size: cover;
+            .tips{
+             	left:auto;
+             	top:auto;
+             	right: ~'calc(-1.5625rem + -8px)';
+             	bottom: 25%;
+                .point{
+                    left: -8/16rem;
+                    top:0px;
+                }
+             }
+         }
+         /*空调*/
+        .air{
+         	position: absolute;
+         	top:16.125rem;
+         	right:0;
+         	width: 3.5rem;
+         	height: 13.96875rem;
+         	background: url('images/5.png') no-repeat;
+         	background-size: cover;
+            .tips{
+             	left:-2.25rem;
+             	top:1rem;
+                .point{
+                    left: auto;
+                    right: -8px;
+                    top: 30%;
+                }
+                .content:before{
+                 	left:auto;
+                 	right: -8px;
+                 	border-color: transparent transparent #282828 #282828;
+                 	transform: rotate(-30deg);
+                 }
+             }
+            .wind{
+             	position: absolute;
+             	top:.5rem;
+             	left:-3rem;
+                // width: 3.5rem;
+             	width: 200/32rem;
+                // height: 2.375rem;
+             	height: 84/32rem;
+             	// background: url('images/6.png') no-repeat;
+             	background-size: 100% 100%;
+                // transform: rotate(10deg);
+                &.run{
+                    animation: gasrun 1.6s infinite ease-in-out;
+                }
+             }
+             @keyframes gasrun{
+                0% {
+                    background: url('images/gas0.png') no-repeat;
+                    background-size: 100% 100%;
+                }
+                14.285% {
+                    background: url('images/gas1.png') no-repeat;
+                    background-size: 100% 100%;
+                }
+                28.571% {
+                    background: url('images/gas2.png') no-repeat;
+                    background-size: 100% 100%;
+                }
+                42.857% {
+                    background: url('images/gas3.png') no-repeat;
+                    background-size: 100% 100%;
+                }
+                57.142% {
+                    background: url('images/gas4.png') no-repeat;
+                    background-size: 100% 100%;
+                }
+                71.428% {
+                    background: url('images/gas3.png') no-repeat;
+                    background-size: 100% 100%;
+                }
+                85.714% {
+                    background: url('images/gas2.png') no-repeat;
+                    background-size: 100% 100%;
+                }
+                100% {
+                    background: url('images/gas1.png') no-repeat;
+                    background-size: 100% 100%;
+                }
+                
+             }
+         }
+         /*沙发*/
+        .sofa{
+         	position: absolute;
+         	top:22.4375rem;
+         	left:50%;
+         	transform: translate(-50%);
+         	width: 17.40625rem;
+         	height: 10.9375rem;
+         	background: url('images/sofa.png') no-repeat;
+         	background-size: cover;
+            &.light-open{
+                background: url('images/11.png') no-repeat;
+                background-size: cover;
+            }
+         }
      }
-     .light .tips{
-     	left:auto;
-     	top:auto;
-     	right: -1.6rem;
-     	bottom: .2rem;
-     }	
-
-     /*窗帘杆*/
-     .page .rod{
-     	position: absolute;
-     	top:6rem;
-     	left:2.96875rem;
-     	right:0.875rem;
-     	height: .625rem;
-     	background: url('images/3.png') no-repeat;
-     	background-size: cover;
-
-     }
-     /*窗户*/
-     .page .window{
-     	position: absolute;
-     	top:7.34375rem;
-     	left:4.4375rem;
-     	right: 2.375rem;
-     	height: 14.1875rem;
-     	background-image: url('images/scenery.png');
-        background-repeat: no-repeat;
-        background-size: cover;
-     	border-width: 8px 11px;
-        border-style: solid; 
-        border-color: #fff;
-        perspective:500;
-        perspective-origin:left top;
-     }
-     .window .tips{
-     	left:40%;
-     	top:50%;
-     }
-     .page .window .left-win,
-     .page .window .right-win{
-     	width: ~'calc(50% - 4px)';
-     	height: 100%;
-     	background-color: rgba(187, 246, 250, 0.7);
-        // opacity: .9;
-     }
-     .page .window .frame-win{
-        background-color: #fff;
+     /*中控*/
+    .model{
         position: absolute;
-        top: 0;
-        left: 50%;
-        width: .5rem;
-        transform: translate(-0.25rem);
-        height: 100%;
-     }
-     .left-win{
-     	float: left;
-     	padding-right: 7px;
-        &.open{
-            transition:transform 2s,transform-origin .5s;
-            transform-origin:left top;
-            transform:translate(0,.25rem) scale(.95,.95) rotateY(70deg);
+        z-index: 10;
+        bottom:0;
+        width: 100%;
+        height: 13.75/2rem +0.78125rem;
+        background: rgba(40,40,40,.45);
+        padding: .625rem 0.78125rem;
+        .icon {
+            margin: .625rem 0.78125rem;
+            width: ~'calc(33.33% - 1.5625rem)';
+            height: 2rem;
+            line-height: 2rem;
+            float: left;
+            font-size: 0.75rem;
+            color: #fff;
+            padding-left: 2.3125rem;
+            background-size: 2rem 2rem;
+            background-repeat: no-repeat;
+            text-align: left;
+            text-indent: 0.3125rem;
+            transition: all .5s;
+            
+            &.btn-sound{
+                background-image: url('images/control/sound.png');
+                &.unactive{
+                    background-image: url('images/control/sound1.png');
+                }
+            }
+            &.btn-light{
+                background-image: url('images/control/light.png');
+                &.unactive{
+                    background-image: url('images/control/light1.png');
+                }
+            }
+            &.btn-window{
+                background-image: url('images/control/window.png');
+                &.unactive{
+                    background-image: url('images/control/window1.png');
+                }
+            }
+            &.btn-curtains{
+                background-image: url('images/control/curtains.png');
+                &.unactive{
+                    background-image: url('images/control/curtains1.png');
+                }
+            }
+            &.btn-air{
+                background-image: url('images/control/air.png');
+                &.unactive{
+                    background-image: url('images/control/air1.png');
+                }
+            }
+           
         }
-        &.close{
-            transition:transform 2s,transform-origin 8s;
+        .unactive{
+            opacity: .6;
         }
-     }
-     .right-win{
-     	padding-left: 7px;
-     	float: right;
-        &.open{
-            transition:transform 2s,transform-origin .5s;
-            transform-origin:right top;
-            transform:translate(0,.25rem) scale(.95,.95) rotateY(-100deg);
-        }
-         &.close{
-            transition:transform 2s,transform-origin 8s;
-        }
-     }
-     /*窗帘*/
-     .page .curtains{
-     	position: absolute;
-     	top:6.6rem;
-     	height:20.15rem;
-     	background: rgba(187, 246, 250, 0.9) url('images/1.png') 0 0 no-repeat;
-     	background-size: cover;
-        transition: width 3s;
-     }
-     .curtains.left{
-     	left:3.75rem;
-     	width:2.5625rem;
-        &.close{
-            width:~'calc((100% - (3.75rem + 1rem)) / 2)';
-        }
-     }
-     .curtains.right{
-     	right:1.78125rem;
-     	width:2.5625rem;
-        &.close{
-            width:~'calc((100% - (3.75rem + 1rem)) / 2)';
-        }
-     }
-     .curtains.left .tips{
-     	left:4rem;
-     	top:auto;
-     	bottom: 40%;
-        width: ~'calc(.9rem*2 + .7rem)';
-        .point{
-            left: -25%;
-        }
-     }
-     /*音响*/
-     .page .sound{
-     	position: absolute;
-     	top:8.1875rem;
-     	left:1.75rem;
-     	width: 1.5625rem;
-     	height: 5rem;
-     	background: url('images/10.png') no-repeat;
-     	background-size: cover;
-     }
-     .sound .tips{
-     	left:auto;
-     	top:auto;
-     	right: ~'calc(-1.5625rem + -12px)';
-     	bottom: 25%;
-        .point{
-            left: -25%;
-        }
-     }
-     /*空调*/
-     .page .air{
-     	position: absolute;
-     	top:16.125rem;
-     	right:0;
-     	width: 3.5rem;
-     	height: 13.96875rem;
-     	background: url('images/5.png') no-repeat;
-     	background-size: cover;
-     }
-     .air .tips{
-     	left:-2.25rem;
-     	top:1rem;
-        .point{
-            left: auto;
-            right: -12px;
-        }
-     }
-     .air .tips .content:before{
-     	left:auto;
-     	right: -12px;
-     	border-color: transparent transparent #282828 #282828;
-     	transform: rotate(-45deg);
-     }
-     .air .wind{
-     	position: absolute;
-     	top:.5rem;
-     	left:-3rem;
-        // width: 3.5rem;
-     	width: 200/32rem;
-        // height: 2.375rem;
-     	height: 84/32rem;
-     	// background: url('images/6.png') no-repeat;
-     	background-size: 100% 100%;
-        // transform: rotate(10deg);
-        &.run{
-            animation: gasrun 1.6s infinite ease-in-out;
-        }
-     }
-     @keyframes gasrun{
-        0% {
-            background: url('images/gas0.png') no-repeat;
-            background-size: 100% 100%;
-        }
-        14.285% {
-            background: url('images/gas1.png') no-repeat;
-            background-size: 100% 100%;
-        }
-        28.571% {
-            background: url('images/gas2.png') no-repeat;
-            background-size: 100% 100%;
-        }
-        42.857% {
-            background: url('images/gas3.png') no-repeat;
-            background-size: 100% 100%;
-        }
-        57.142% {
-            background: url('images/gas4.png') no-repeat;
-            background-size: 100% 100%;
-        }
-        71.428% {
-            background: url('images/gas3.png') no-repeat;
-            background-size: 100% 100%;
-        }
-        85.714% {
-            background: url('images/gas2.png') no-repeat;
-            background-size: 100% 100%;
-        }
-        100% {
-            background: url('images/gas1.png') no-repeat;
-            background-size: 100% 100%;
-        }
-        
-     }
-     /*沙发*/
-     .page .sofa{
-     	position: absolute;
-     	top:22.4375rem;
-     	left:50%;
-     	transform: translate(-50%);
-     	width: 17.40625rem;
-     	height: 10.9375rem;
-     	background: url('images/11.png') no-repeat;
-     	background-size: cover;
-     }
+    }
      .q-mask{
         position: absolute;
         top: 0;
@@ -310,7 +387,12 @@
         right: 0;
         bottom: 0;
         background-color: rgba(0, 0, 0, 0.4);
-        z-index: 6;
-        display: none;
+        z-index: -1;
+        opacity: 0;
+        transition: all .5s;
+        &.open{
+            z-index: 6;
+            opacity: 1;
+        }
      }
  }
