--- a/app/components/RecipesDetail/recipesDetail.less
+++ b/app/components/RecipesDetail/recipesDetail.less
@@ -1,7 +1,7 @@
 /*********
  * recipes-detail
  **********/
- 
+ @color:#333;
  section.recipes-detail{
  	background: #fff;
  	width: 100%;
@@ -25,7 +25,87 @@
 		width:100%;
 		height: ~'calc(100% - 2.8125rem)';
 		overflow-y: auto;
-		padding: 5/16rem;
-		
+		padding: 10/16rem;
+		.title{
+				font-size: .875rem;
+		    font-weight: 400;
+		    border-left: 3px solid #03a9f5;
+		    padding-left: 5px;
+		    margin-top: 5px;
+		    margin-bottom: 10px;
+		    background-color: rgba(0,0,0,.05);
+			}
+		.q-name{
+			font-weight: 400;
+			font-size: 1rem;
+			padding: 5px 0;
+		}
+		.q-desc{
+			font-size: 14/16rem;
+			padding: 5px 0;
+			text-indent: 2*14/16rem;
+			line-height: 2*14/16rem;
+			color: @color;
+		}
+		.q-type{
+			padding: 5px 0;
+			
+			span{
+				display: inline-block;
+		    border: 1px solid #dedede;
+		    border-radius: 10px;
+		    font-size: 12px;
+		    color: #6a6a6a;
+		    padding: 2px 8px;
+		    margin-right: 4px;
+		    margin-bottom: 4px;
+		    height: 18px;
+		    line-height: 12px;
+			}
+		}
+		.q-nandu,.q-times{
+			padding: 5px 0;
+			font-size: 14/16rem;
+			width: 50%;
+			display: inline-block;
+		}
+		.q-zhuliao,.q-fuliao{
+			div:not(.title){
+				display: inline-block;
+				color: @color;
+				font-size: 14/16rem;
+				padding: 5px 0;
+				width: 50%;
+				span:first-child{
+					float: left;
+				}
+				span:last-child{
+					float: right;
+					text-align: right;
+					color: lighten(@color, 40%);
+					padding-right: 5px;
+				}
+			}
+		}
+		.q-buzhou,.q-ps{
+			ol{
+				color: @color;
+				font-size: 14/16rem;
+				padding: 5px 0 5px 19px;
+				list-style-type:decimal;
+				li{
+					padding: 5px 0;
+				}
+			}
+		}
+		.q-ps{
+			div:not(:first-child){
+				color: @color;
+				font-size: 14/16rem;
+				padding: 5px 0;
+				line-height: 2*14/16rem;
+				text-indent: 2*14/16rem;
+			}
+		}
  	}
 } 
