--- a/app/common.less
+++ b/app/common.less
@@ -278,7 +278,7 @@ button,.icon-btn{
 }
 .pagination{
     position: absolute;
-    top:26/16rem;
+    top:(26 - 14)/16rem;
     left:0;
     right:0;
     height: 8px;
@@ -294,4 +294,12 @@ button,.icon-btn{
             background-color: rgba(0, 0, 255, 0.7);
         }
     }
+}
+.page{
+    height: ~'calc(100% - 20px - 2.8125rem)';
+}
+.q-state{
+    height: 20px;
+    width: 100%;
+    background-color: transparent;
 }
