--- a/app/components/Air/air.less
+++ b/app/components/Air/air.less
@@ -36,6 +36,7 @@
 	 	color: #fff;
 	 	font-size: 1.125rem;
 	 	text-align: center;
+	 	position: relative;
 	 }
 	 .color-white{
 	 	color: #fff;
@@ -281,7 +282,7 @@
 	}
 	.air-switch{
 		position: absolute;
-		top:40/16rem;
+		top:60/16rem;
 		right: 20/16rem;
 		width: 76/32rem;
 		height: 76/32rem;
