--- a/app/components/Door/door.less
+++ b/app/components/Door/door.less
@@ -8,6 +8,7 @@ section.index {
     height: 100%;
     background: #1a1822;
     background: -webkit-linear-gradient(top right,#1a1822, #4F4B4E);
+
  }
  /******
  * tip提示
@@ -52,8 +53,7 @@ section.index {
 
     .page{
      	width: 100%;
-     	height: ~'calc(100% - 2.8125rem)';
-     	height: ~'calc(100% - 2.8125rem)';
+     	// height: ~'calc(100% - 20px - 2.8125rem)';
      	color: #cccccc;
      }
     .page .top{
