--- a/app/components/RecipesDetail/recipesDetail.less
+++ b/app/components/RecipesDetail/recipesDetail.less
@@ -3,7 +3,7 @@
  **********/
  @color:#333;
  section.recipes-detail{
- 	background: #fff;
+ 	background: #03a9f5;
  	width: 100%;
  	height: 100%;
 
@@ -17,15 +17,17 @@
  		font-size: 1.125rem;
  		text-align: center;
  		background: #03a9f5;
+ 		position: relative;
  	}
 	.q-button-prev{
 		color:#fff;
 	}
  	.page{
 		width:100%;
-		height: ~'calc(100% - 2.8125rem)';
+		// height: ~'calc(100% - 2.8125rem)';
 		overflow-y: auto;
 		padding: 10/16rem;
+		background-color: #fff;
 		.title{
 				font-size: .875rem;
 		    font-weight: 400;
