--- a/app/components/Kitchen/kitchen.less
+++ b/app/components/Kitchen/kitchen.less
@@ -1,18 +1,20 @@
 /*********
  * kitchen
  **********/
+ @states-height:20/16rem;
  body{
  	background: #bf9e8d;
  }
  section.kitchen {
  	width: 100%;
  	height: 100%;
- 	background: url('images/ceilling.png') no-repeat,
+ 	background: url('images/ceilling.jpg') no-repeat,
 						 	-webkit-linear-gradient(#ebe7e6 0%,#ebe7e6 22.71875rem,#bf9e8d 22.71875rem, #bf9e8d 100%);
  	background-position: top left,
 										 	 top 6.96875rem left 0;
  	background-size: 100% 6.96875rem,
 								 	 100% 100%;
+
  }
  .kitchen{
 
@@ -22,12 +24,13 @@
 	 	color: #000;
 	 	font-size: 1.125rem;
 	 	text-align: center;
-
+		position: relative;
     line-height: 2.8125rem;
+    
 	 }
 	 
 	 .page{
-	 	height: 100%;
+	 	// height: 100%;
 	 	width: 100%;
 	 	position: relative;
 	 }
@@ -92,7 +95,7 @@
 	.window{
 		position: absolute;
 		left: 0;
-		top: 5.25rem;
+		top: calc(5.25rem - @states-height);
 		width: 6.8rem;
 		height: 5.71875rem;
 		background: url('images/scenery.png') no-repeat;
@@ -155,7 +158,7 @@
 	.fan{
 		position: absolute;
 		left:7.25rem;
-		top:5.25rem;
+		top:calc(5.25rem - @states-height);
 		width: 2rem;
 		height: 2rem;
 		border: 0.125rem solid #ccc8c9;
@@ -192,7 +195,7 @@
 	.air-blower{
 		position: absolute;
 		right:5.1875rem;
-		top:4.0625rem;
+		top:calc(4.0625rem - @states-height);
 		width: 1.75rem;
 		height: 8.1875rem;
 		background: url('images/airBlower.png') no-repeat,#9d948d;
@@ -249,7 +252,7 @@
 	.fridge{
 		position: absolute;
 		left:0;
-		top:14.5125rem;
+		top:calc(14.5125rem - @states-height);
 		width: 4.0625rem;
 		height: 12.375rem;
 		background: url('images/fridge.png') no-repeat;
@@ -271,7 +274,7 @@
 	.cupboard{
 		position: absolute;
 		right:5rem;
-		top:12.1875rem;
+		top:calc(12.1875rem - @states-height);
 		left: 4.0625rem;
 		height: 14.625rem;
 		background: -webkit-linear-gradient(#e0d8d0 0%,#e0d8d0 5.5625rem,#67625c 5.5625rem,#67625c 9.75rem,#e0d8d0 9.75rem,#e0d8d0 100%);
@@ -385,7 +388,7 @@
 	.smoke-machine{
 		position: absolute;
 		right: 1.625rem;
-		top: 4.0625rem;
+		top: calc(4.0625rem - @states-height);
 		width: 3.5625rem;
 		height: 18.6875rem;
 		background-color: #e5e4e2;
@@ -471,7 +474,7 @@
 	.console-wall{
 		position: absolute;
 		right:0;
-		top:4.0625rem;
+		top:calc(4.0625rem - @states-height);
 		width: 1.625rem;
 		height: 18.8125rem;
 		background-color: #ccc8c9;
@@ -479,7 +482,7 @@
 	/*锅*/
 	.pot{
 		position: absolute;
-	  top: 20.41875rem;
+	  top: calc(20.41875rem - @states-height);
 		right:1.34375rem;
 		width: 5.375rem;
 		height: 2.375rem;
@@ -491,7 +494,7 @@
 	.console{
 		position: absolute;
 		right: 0;
-		top: 23rem;
+		top: calc(23rem - @states-height);
 		width: 7.09375rem;
 		height: 1.53125rem;
 		background-color: #ccc8c9;
@@ -509,7 +512,7 @@
 	.dining-table{
 		position: absolute;
 		right: 0;
-		top: 24.875rem;
+		top: calc(24.875rem - @states-height);
 		width: 14.25rem;
 		height: 6.3125rem;
 		background-color: #fbfbfb;
@@ -526,7 +529,7 @@
 	/*健康食谱*/
 	.recipes{
 		position: absolute;
-		top:22rem;
+		top:calc(22rem - @states-height);
 		left:11.09375rem;
 		width: 5.5625rem;
 		height: 2.625rem;
@@ -554,7 +557,7 @@
 	.stool1{
 		position: absolute;
 		left:5.1875rem;
-		top:25rem;
+		top:calc(25rem - @states-height);
 		width: 3.875rem;
 		height: 6.5rem;
 		background: url('images/stool1.png') no-repeat;
@@ -564,7 +567,7 @@
 	.stool2{
 		position: absolute;
 		left:11.75rem;
-		top:25.625rem;
+		top:calc(25.625rem - @states-height);
 		width: 3.0625rem;
 		height: 6.4375rem;
 		background: url('images/stool2.png') no-repeat;
@@ -574,7 +577,7 @@
 	.stool3{
 		position: absolute;
 		left:16.875rem;
-		top:25.625rem;
+		top:calc(25.625rem - @states-height);
 		width: 3.0625rem;
 		height: 6.4375rem;
 		background: url('images/stool3.png') no-repeat;
@@ -586,7 +589,7 @@
 	.carpet{
 		position: absolute;
 		right: 0;
-		top: 29.1875rem;
+		top: calc(29.1875rem - @states-height);
 		width: 20.5rem;
 		height: 5.5625rem;
 		background-color: #a28577;
@@ -598,7 +601,7 @@
 		z-index: 10;
 		bottom:0;
 		width: 100%;
-		height: 13.75rem;
+		height: calc(13.75rem - 2* @states-height);
 		background: rgba(40,40,40,.45);
 		padding: .625rem 0.78125rem;
 		.icon {
