--- a/app/components/Room/room.less
+++ b/app/components/Room/room.less
@@ -8,7 +8,7 @@
     width: 100%;
     height: 100%;
     background: url('images/7.png') no-repeat,
-    url('images/9.png') no-repeat,
+    url('images/9.jpg') no-repeat,
     url('images/8.png') no-repeat,
     #bf9e8d;
     background-position: top 5.59375rem left 0,
@@ -59,10 +59,11 @@
      	font-size: 1.125rem;
      	text-align: center;
      	line-height: 2.8125rem;
+        position: relative;
      }
      
     .page{
-     	height: 100%;
+     	// height: 100%;
      	width: 100%;
      	position: relative;
         /** 灯**/
