--- a/app/common.less
+++ b/app/common.less
@@ -303,3 +303,14 @@ button,.icon-btn{
     width: 100%;
     background-color: transparent;
 }
+.q-main{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    transition: all 1s;
+    display: flex;
+    section{
+        position: relative;
+       
+    }
+}   
