--- a/app/components/Kitchen/kitchen.less
+++ b/app/components/Kitchen/kitchen.less
@@ -3,7 +3,7 @@
  **********/
  @states-height:20/16rem;
  body{
- 	background: #bf9e8d;
+ 	// background: #bf9e8d;
  }
  section.kitchen {
  	width: 100%;
@@ -14,7 +14,7 @@
 										 	 top 6.96875rem left 0;
  	background-size: 100% 6.96875rem,
 								 	 100% 100%;
-
+	transition: opacity 1s;
  }
  .kitchen{
 
