--- a/app/components/Door/door.less
+++ b/app/components/Door/door.less
@@ -189,7 +189,7 @@ section.index {
         z-index: 11;
         left: 0;
         top: 0;
-        right: 0;
+        width: 100vw;
         bottom: 0;
         background-color: rgba(0, 0, 0, 0.6);
         display: -webkit-box;
