--- a/app/components/Air/air.less
+++ b/app/components/Air/air.less
@@ -9,6 +9,7 @@
 		overflow: hidden;
 		position: relative;
 		opacity: 0;
+		z-index: -1;
 		transition: opacity 3s,background 3s;
 	 	&.air-close{
 	 		background: #fff url('images/airbg.jpg') 0 0 no-repeat;
