--- a/app/components/Door/door.less
+++ b/app/components/Door/door.less
@@ -4,8 +4,8 @@
  * index
  **********/
 section.index {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: #1a1822;
     background: -webkit-linear-gradient(top right,#1a1822, #4F4B4E);
 
