--- a/app/components/Fridge/fridge.less
+++ b/app/components/Fridge/fridge.less
@@ -4,9 +4,10 @@
  
  section.fridge{
  	background: #fff;
- 	width: 100%;
- 	height: 100%;
+ 	width: 100vw;
+ 	height: 100vh;
  	opacity: 0;
+ 	z-index: -1;
 	transition: opacity 3s;
  }
  .fridge{
