--- a/app/components/Kitchen/kitchen.less
+++ b/app/components/Kitchen/kitchen.less
@@ -6,8 +6,8 @@
  	// background: #bf9e8d;
  }
  section.kitchen {
- 	width: 100%;
- 	height: 100%;
+ 	width: 100vw;
+ 	height: 100vh;
  	background: url('images/ceilling.jpg') no-repeat,
 						 	-webkit-linear-gradient(#ebe7e6 0%,#ebe7e6 22.71875rem,#bf9e8d 22.71875rem, #bf9e8d 100%);
  	background-position: top left,
@@ -600,7 +600,7 @@
 		position: absolute;
 		z-index: 10;
 		bottom:0;
-		width: 100%;
+		width: 100vw;
 		height: calc(13.75rem - 2* @states-height);
 		background: rgba(40,40,40,.45);
 		padding: .625rem 0.78125rem;
@@ -675,7 +675,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        right: 0;
+        width: 100vw;
         bottom: 0;
         background-color: rgba(0, 0, 0, 0.4);
         z-index: -1;
