--- a/app/components/Recipes/recipes.less
+++ b/app/components/Recipes/recipes.less
@@ -4,8 +4,8 @@
  
  section.recipes{
  	background: #03a9f5;
- 	width: 100%;
- 	height: 100%;
+ 	width: 100vw;
+ 	height: 100vh;
  	opacity: 0;
 	transition: opacity 3s;
  }
