--- a/app/components/RecipesDetail/recipesDetail.less
+++ b/app/components/RecipesDetail/recipesDetail.less
@@ -4,9 +4,10 @@
  @color:#333;
  section.recipes-detail{
  	background: #03a9f5;
- 	width: 100%;
- 	height: 100%;
+ 	width: 100vw;
+ 	height: 100vh;
 	opacity: 0;
+	z-index: -1;
 	transition: opacity 3s;
  }
  .recipes-detail{
