--- a/app/components/Room/room.less
+++ b/app/components/Room/room.less
@@ -6,8 +6,8 @@
  }
  section.room {
     position: relative;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: url('images/7.png') no-repeat,
     url('images/9.jpg') no-repeat,
     url('images/8.png') no-repeat,
@@ -264,12 +264,31 @@
              	width: 200/32rem;
                 // height: 2.375rem;
              	height: 84/32rem;
-             	// background: url('images/6.png') no-repeat;
-             	background-size: 100% 100%;
                 // transform: rotate(10deg);
+                // transition: transform .5s;
                 &.run{
-                    animation: gasrun 1.6s infinite ease-in-out;
+                 	background: url('images/gas0.png') no-repeat;
+                 	background-size: 100% 100%;
+                    transform: scaleY(2) rotate(5deg) translate(0,.25rem);
+                    // animation: gasrun 1.6s infinite ease-in-out;
+                    perspective:500;
+                    // animation: gasscale 1s infinite linear;
                 }
+             }
+             @keyframes gasscale{
+                0%{
+                    transform:scaleY(1) translate(0,.2rem);
+                    opacity: 1;
+                }
+                50%{
+                    transform:scaleY(3) translate(0, 0.4rem);
+                    opacity: .5;
+                }
+                100%{
+                    transform:scaleY(1) translate(0,.2rem);
+                    opacity: 1;
+                }
+                
              }
              @keyframes gasrun{
                 0% {
@@ -388,7 +407,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        right: 0;
+        width: 100vw;
         bottom: 0;
         background-color: rgba(0, 0, 0, 0.4);
         transition: all .5s;
@@ -406,7 +425,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        right: 0;
+        width: 100vw;
         bottom: 0;
         background-color: rgba(0, 0, 0, 0.6);
         display: -webkit-box;
@@ -427,7 +446,7 @@
        &.open{
             opacity:0;
             z-index: -1;
-            animation: delyclose 6s;
+            animation: delyclose 5s 1 linear;
        }
        &.close{
             opacity:0;
@@ -435,12 +454,14 @@
        }
        @keyframes delyclose{
             0%{
-                z-index: 15;
+                background-color: rgba(0, 0, 0, 1);
+                z-index: 9;
                 opacity: 1;
             }
             92%{
-                z-index: 15;
-                opacity:0;
+                background-color: rgba(0, 0, 0, .1);
+                z-index: 5;
+                opacity:0.1;
             }
             100%{
                 opacity:0;
