--- a/app/common.less
+++ b/app/common.less
@@ -321,12 +321,13 @@ button,.icon-btn{
     }
 }
 .page{
-    height: ~'calc(100% - 20px - 2.8125rem)';
+    height: ~'calc(100% - 0px - 2.8125rem)';
 }
 .q-state{
     height: 20px;
     width: 100%;
     background-color: transparent;
+    display: none;
 }
 .q-main{
     position: absolute;
