--- a/app/components/Kitchen/kitchen.less
+++ b/app/components/Kitchen/kitchen.less
@@ -1,7 +1,10 @@
 /*********
  * kitchen
  **********/
- @states-height:20/16rem;
+ //ios states
+ // @states-height:20/16rem;
+ //android states
+ @states-height:0rem;
  body{
  	// background: #bf9e8d;
  }
@@ -601,7 +604,7 @@
 		z-index: 10;
 		bottom:0;
 		width: 100vw;
-		height: calc(13.75rem - 2* @states-height);
+		height: calc(13.75rem - 2.5rem);
 		background: rgba(40,40,40,.45);
 		padding: .625rem 0.78125rem;
 		.icon {
