--- a/app/components/Room/room.less
+++ b/app/components/Room/room.less
@@ -263,9 +263,12 @@
              	width: 200/32rem;
              	height: 84/32rem;
                 &.run{
-                 	background: url('images/gas0.png') no-repeat;
+                 	background: url('images/gas.gif') no-repeat;
                  	background-size: 100% 100%;
-                    transform: scaleY(2) rotate(5deg) translate(0,.25rem);
+                    transform: scaleY(1.2) rotate(0deg) translate(0rem, 0.5rem);
+                    opacity: .7;
+                    // transform: scaleY(2) rotate(5deg) translate(0,.25rem);
+                    
                 }
              }
              
